--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "socket_io",
+  "name": "chat_sockio",
+  "homepage": "https://west1155.github.io/chat_sockio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
